sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:7: error: Int does not take parameters
    echange(i,j)
           ^