sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var echange = 0
  var i = 0
  var j = 1
  if (plusPetit(i,j)==true){
    echange(i,j)
    i = i + 1
    j = j + 1
  }
  else {
    i = i + 1
    j = j + 1
  }
}